refactor(hexudon): reorganize layers and simplify match architecture#